force-app/main/default/objects/Notifications_Configuration__mdt/Notifications_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Notifications Configuration</label>
    <pluralLabel>Notifications Configurations</pluralLabel>
</CustomObject>