force-app/main/default/objects/Notifications_Configuration__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter</fullName>
                <default>true</default>
                <label>Letter</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>