force-app/main/default/objects/Notifications_Configuration__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>