force-app/main/default/objects/Notifications_Configuration__mdt/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Accepted</fullName>
            </value>
            <value>
                <fullName>Quote_Order_Cancellation</fullName>
                <label>Quote Order Cancellation</label>
            </value>
            <value>
                <fullName>Order Entry Confirmation</fullName>
            </value>
            <value>
                <fullName>Order Confirmation</fullName>
            </value>
            <value>
                <fullName>Order Activation</fullName>
            </value>
            <value>
                <fullName>Order Connection Geostruct</fullName>
            </value>
            <value>
                <fullName>Order Service Geostruct</fullName>
            </value>
            <value>
                <fullName>Order Voice</fullName>
            </value>
            <value>
                <fullName>Negative Building Decision</fullName>
            </value>
            <value>
                <fullName>Order Not Feasible</fullName>
            </value>
            <value>
                <fullName>Quote Accepted Premarketing</fullName>
            </value>
            <value>
                <fullName>Quote Document</fullName>
            </value>
            <value>
                <fullName>Quote Not Feasible</fullName>
            </value>
            <value>
                <fullName>Order Termination</fullName>
            </value>
            <value>
                <fullName>Order Change</fullName>
            </value>
            <value>
                <fullName>Order Additional Cost</fullName>
            </value>
            <value>
                <fullName>Termination to Voice team</fullName>
            </value>
            <value>
                <fullName>Order Termination Entry Confirmation</fullName>
            </value>
            <value>
                <fullName>Order HW Malfunction Entry Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>