force-app/main/default/objects/Notifications_Configuration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Use_Case__c</columns>
    <columns>Template_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>